--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,8 @@ build/# See https://help.github.com/articles/ignoring-files/ for more about igno
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.next/
+node_modules/
+/npm-debug.log
+.DS_Store
+out/
