--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "devDependencies": {
     "@babel/core": "^7.13.13",
     "@babel/preset-react": "^7.13.13",
-    "frontmatter-markdown-loader": "^3.6.2"
+    "frontmatter-markdown-loader": "^3.6.2",
+    "gray-matter": "^4.0.2",
+    "raw-loader": "^4.0.2",
+    "react-markdown": "^5.0.3"
   },
   "scripts": {
     "dev": "next",
